Addee img-wrap into gallery html section to finish styling gallery hover and fixes at calc. Finished section gallery.

--- a/css/_components.gallery.scss
+++ b/css/_components.gallery.scss
@@ -63,10 +63,34 @@
 
     .gallery-column {
       margin-top: 20px;
-      > img {
-        max-width: 100%;
-        width: 100%;
-        display: block;
+
+      .gallery-img-wrap {
+
+        .gallery-img-link {
+          display: block;
+          position: relative;
+          > img {
+            max-width: 100%;
+            width: 100%;
+            display: block;
+          }
+
+          &::before {
+            content: '';
+            background: url("../img/gallery-hover.png") rgba(0, 0, 0, .5) no-repeat center center;
+            width: 100%;
+            height: 100%;
+            display: block;
+            position: absolute;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            opacity: 0;
+            transition: opacity .3s;
+          }
+          &:hover::before {
+            opacity: 1;
+          }
+        }
       }
 
       .gallery-text-wrap {
@@ -92,7 +116,7 @@
             border-right: 20px solid transparent;
             border-bottom: 20px solid #ffffff;
             bottom: 59px;
-            left: calc(50% - 10px);
+            left: calc(50% - 20px);
           }
         }
       }
